log
Fri 10 Mar 2023 12:12:39 PM UTC: 
 tests:  0|7
total_score: 0/70
ee7a730
Fri 10 Mar 2023 12:26:44 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:9: error: expected expression before ‘;’ token
   18 |   *a -=*;
      |         ^
Compilation failed
95dd63d
Fri 10 Mar 2023 12:26:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
a2ff686
Fri 10 Mar 2023 09:24:08 PM UTC: 
 tests:  1|6
total_score: 10/70
55c711a
Sat 11 Mar 2023 02:02:43 AM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|7
total_score: 0/70
0ede92b
Sat 11 Mar 2023 02:03:35 AM UTC: 
 exercises.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  1|6
total_score: 10/70
57f7d44
Sat 11 Mar 2023 02:26:11 AM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:30:3: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   30 |   for (i=0;i<a[i];i++ )
      |   ^~~
exercises.c:33:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   33 |     if(a[i]<*min)
      |     ^~
cc1: all warnings being treated as errors
Compilation failed
a29969a
